tests/snapshots/run_wpt_conformance__coreml_cast_float_to_integer_overflows.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
mlNumber.https.any.js cast float to integer overflows, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type clip: Param 'x' has incorrect type for operator 'ios17.clip'. Expected { [...]>, [...]>, tensor<fp16, tensor<fp32 }; got tensor<uint8, [4]>.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: u8[4] @bytes([255, 127, 5, 0]);
  }

  nodes {
    [clampOutput] = clamp(operand_0, label="", maxValue=null, minValue=1000);
  }

  outputs { clampOutput; }
}
