tests/snapshots/run_wpt_conformance__coreml_cast_fractional_float_to_integer.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
mlNumber.https.any.js cast fractional float to integer, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported constant data type: Int64

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: i64[5] @bytes([3, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0]);
  }

  nodes {
    [clampOutput] = clamp(operand_0, label="", maxValue=null, minValue=3.9);
  }

  outputs { clampOutput; }
}
